tests/specs/run/config_imports/missing_unstable/attr.ts
import toml from "./settings.toml" with { type: "toml" };
console.log(toml);
